{
    "name": "SkiGameInputActions",
    "maps": [
        {
            "name": "GamePlay",
            "id": "caf2b3a9-ccdf-4039-80c7-4c2914fd2a1a",
            "actions": [
                {
                    "name": "Boost",
                    "type": "Button",
                    "id": "2e46b7a5-5fff-4546-8a87-de7fb4292db5",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Flip",
                    "type": "Button",
                    "id": "c97307d8-b331-4939-a714-56e13915d2d0",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Spin",
                    "type": "Button",
                    "id": "af5473aa-3d17-43ce-a308-6b8b16484fdf",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "RightTurn",
                    "type": "Button",
                    "id": "f4be77e8-5fe1-4391-af54-95bd1bbd9a09",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "LeftTurn",
                    "type": "Button",
                    "id": "b36bcd28-8a0e-4fc7-90f3-47a5d8932953",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "ToggleView",
                    "type": "Button",
                    "id": "79bc136f-6450-4729-a709-5635173ac3fd",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "50e6f6aa-e245-4079-bd55-6974b15caf88",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Boost",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "38e1c9ae-c771-4a31-a3d4-522ef472133a",
                    "path": "<XRController>{LeftHand}/{PrimaryButton}",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Boost",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "8810bcc4-fdd8-47cf-b5ff-5d043072b177",
                    "path": "<XRController>{RightHand}/{PrimaryButton}",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Boost",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "b4ab3ab2-79cb-4e1b-9591-0dbf965727b5",
                    "path": "<Keyboard>/upArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Flip",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "8f43e396-c947-4300-aeb5-67eaf957b639",
                    "path": "<XRController>{RightHand}/{SecondaryTrigger}",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Flip",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "18a3491b-a25f-40c1-9783-df0bad22ed78",
                    "path": "<Keyboard>/downArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Spin",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "a7ded499-cb51-4fc5-b914-aaed2c7e56b4",
                    "path": "<XRController>{LeftHand}/{SecondaryTrigger}",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Spin",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "97542ff3-cbc8-46cf-a154-7d391115f77e",
                    "path": "<Keyboard>/rightArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RightTurn",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "07b41e9f-a8ed-4995-8274-afbdb28c524b",
                    "path": "<XRController>{RightHand}/{PrimaryTrigger}",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RightTurn",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "c0188551-7856-4245-a630-4d1beac669fb",
                    "path": "<Keyboard>/leftArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "LeftTurn",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "8939dba7-dc2e-4610-af4c-581e9a8c6f00",
                    "path": "<XRController>{LeftHand}/{PrimaryTrigger}",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "LeftTurn",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "994822d5-bf99-4a04-9b00-329a4edb394e",
                    "path": "<Keyboard>/enter",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ToggleView",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "a1e65244-1b97-46e9-91d4-2d847a1fe8eb",
                    "path": "<XRController>{RightHand}/{SecondaryButton}",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ToggleView",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "a03139eb-8d13-46df-9372-ff67844bac77",
                    "path": "<XRController>{LeftHand}/{SecondaryButton}",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ToggleView",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}